--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,10 +84,71 @@ body {
 }
 
 .hero {
+  margin-left: 80px;
   height: 530px;
   position: relative;
-  background-color: #bbbbbb;
+  background-color: white;
 }
+.post1 {
+  position: absolute;
+  margin-left: 20px;
+  height: 530px;
+  width: 350px;
+  background-color: #cac8c8;
+}
+.post2 {
+  position: absolute;
+  margin-left: 380px;
+
+  height: 530px;
+  width: 350px;
+  background-color: #cac8c8;
+}
+.post3 {
+  position: absolute;
+  margin-left: 740px;
+
+  height: 530px;
+  width: 350px;
+  background-color: #cac8c8;
+}
+.pTitle{
+  position: absolute;
+  margin-left: 20px;
+  margin-top: 20px;
+
+  height: 190px;
+  width: 290px;
+  background-color: #929292;
+}
+.pText{
+  position: absolute;
+  margin-left: 20px;
+  margin-top: 250px;
+
+  height: 210px;
+  width: 290px;
+  background-color: #b6b6b6;
+}
+.pTitle1{
+  position: absolute;
+  margin-left: 20px;
+  margin-top: 20px;
+
+  height: 90px;
+  width: 290px;
+  background-color: #929292;
+}
+.pText1{
+  position: absolute;
+  margin-left: 20px;
+  margin-top: 150px;
+
+  height: 310px;
+  width: 290px;
+  background-color: #b6b6b6;
+}
+
 
 .text {
   position: absolute;
@@ -119,7 +180,9 @@ body {
 .latest {
   height: 670px;
   display: flex;
-  margin-bottom: 60px;
+  margin-bottom: 110px;
+  padding-left: 60px;
+
 }
 
 .post {
@@ -132,16 +195,17 @@ body {
 
 .title {
   width: 300px;
-  height: 80px;
+  height: 260px;
   background-color: #797979;
-  margin: 60px auto;
+  /* margin: 60px auto; */
+  margin-top: 60px;
 }
 
 .post-text {
   width: 300px;
-  height: 300px;
+  height: 400px;
   background-color: #adadad;
-  margin: 60px auto;
+  /* margin: 60px auto; */
 }
 
 .banner {
@@ -154,9 +218,10 @@ body {
 .big-banner {
   flex: 2;
   width: 600;
-  height: 600px;
+  height: 360px;
   background-color: #858585;
   margin: 60px;
+  margin-top: 100px;
 }
 
 .conf {
@@ -197,6 +262,7 @@ body {
   height: 320px;
   display: flex;
   align-items: center;
+
 }
 
 .person-img {
@@ -219,4 +285,51 @@ body {
   height: 200px;
   background-color: #bdbdbd;
   margin-right: 100px;
+}
+
+.preFooter {
+  height: 500px;
+  width: 100%;
+  margin-bottom: 50px;
+}
+
+.book {
+  position: absolute;
+  margin-left: 69%;
+  z-index: 1;
+  height: 300px;
+  width: 350px;
+  background-color: #636363;
+}
+
+
+.colorBar {
+  position: absolute;
+  margin-top: 190px;
+
+  height: 310px;
+  width: 100%;
+  background-color: #929292;
+}
+
+.colBarText {
+  position: absolute;
+  margin-top: 20px;
+  margin-left: 30px;
+
+
+  height: 270px;
+  width: 55%;
+  background-color: #494949;
+}
+footer {
+  height: 760px;
+  width: 100%;
+  background-color: #8b8b8b;
+
+}
+.fTop {
+  height: 380px;
+  width: 100%;
+  background-color: #474747;
 }
