--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,38 +90,20 @@ html {
 .post1 {
   float: left;
   margin: 20px 4%;
-  padding: 45px 2%;
-  height: 530px;
-  width: 25%;
-  background-color: #cac8c8;
-}
-
-.post2 {
-  float: left;
-  margin: 20px 4%;
-  padding: 45px 2%;
-  height: 530px;
-  width: 25%;
-  background-color: #cac8c8;
-}
-
-.post3 {
-  float: left;
-  margin: 20px 4%;
-  padding: 45px 2%;
-  height: 530px;
+  padding: 2%;
+  height: 60vh;
   width: 25%;
   background-color: #cac8c8;
 }
 
 .pTitle {
-  height: 190px;
+  height: 20vh;
   background-color: #929292;
 }
 
 .pText {
-  height: 210px;
-  margin-top: 40px;
+  height: 25vh;
+  margin-top: 5%;
   background-color: #b6b6b6;
 }
 
@@ -264,7 +246,7 @@ html {
 
 .book {
   position: relative;
-  top:-170px;
+  top: -170px;
   left: 70%;
   z-index: 1;
   height: 300px;
