--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,17 +48,10 @@ html {
   display: flex;
 }
 
-.left {
-  flex: 1;
+.half {
   float: left;
   width: 50%;
-  padding: 30px;
-}
-
-.right {
-  flex: 1;
-  float: left;
-  padding: 30px;
+  padding: 30px 3%;
 }
 
 .main-title {
@@ -69,14 +62,14 @@ html {
 }
 
 .author {
-  width: 260px;
+  width: 45%;
   height: 50px;
   background-color: #bbbbbb;
 }
 
 .article {
   margin-top: 40px;
-  width: 560px;
+  width: 70%;
   height: 180px;
   background-color: #999999;
 }
@@ -107,33 +100,6 @@ html {
   background-color: #b6b6b6;
 }
 
-.text {
-  position: absolute;
-  top: 70px;
-  left: 150px;
-  width: 600px;
-  height: 270px;
-  background-color: #a3a3a3;
-}
-
-.cta {
-  position: absolute;
-  top: 400px;
-  left: 150px;
-  width: 300px;
-  height: 70px;
-  background-color: #424242;
-}
-
-.img {
-  position: absolute;
-  top: -50px;
-  right: 120px;
-  width: 150px;
-  height: 180px;
-  background-color: #818181;
-}
-
 .latest {
   height: 670px;
   display: flex;
@@ -142,10 +108,6 @@ html {
 }
 
 .post {
-  flex: 1;
-}
-
-.ad {
   flex: 1;
 }
 
@@ -160,13 +122,6 @@ html {
   width: 300px;
   height: 400px;
   background-color: #adadad;
-}
-
-.banner {
-  width: 300px;
-  height: 300px;
-  background-color: #858585;
-  margin: 60px auto;
 }
 
 .big-banner {
@@ -212,8 +167,10 @@ html {
 }
 
 .person {
+  width: 100%;
   height: 320px;
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 
@@ -226,37 +183,21 @@ html {
 }
 
 .person-img-inner {
-  width: 200px;
+  width: 70%;
   height: 200px;
   background-color: #838383;
   margin: auto;
 }
 
 .person-text-inner {
-  width: 800px;
+  width: 80%;
   height: 200px;
   background-color: #bdbdbd;
   margin-right: 100px;
 }
 
-.preFooter {
-  height: 200px;
-  width: 100%;
-}
-
-.book {
-  position: relative;
-  top: -170px;
-  left: 70%;
-  z-index: 1;
-  height: 300px;
-  width: 350px;
-  background-color: #636363;
-}
-
 .colorBar {
-  margin-top: 160px;
-  margin-bottom: 50px;
+  margin: 50px 0;
   padding: 20px;
   height: 310px;
   width: 100%;
@@ -264,11 +205,20 @@ html {
 }
 
 .colBarText {
-  position: relative;
-  top: -300px;
+  float: left;
   height: 270px;
   width: 55%;
   background-color: #494949;
+}
+
+.book {
+  float: left;
+  margin-left: 15%;
+  transform: translateY(-100px);
+  height: 300px;
+  width: 25%;
+  max-width: 325px;
+  background-color: #636363;
 }
 
 footer {
